Fixed the pics, finally

--- a/index.html
+++ b/index.html
@@ -69,56 +69,61 @@
 			</div>
 		</div>
 	</div>
-	<div class="container pics">
+	
+	<div class="row fourpics">
 		<div class="col-xs-6 col-sm-3 col-md-3 col-lg-3">
-			<div class="container pic">
-				<div><img src="images/thumb1.jpg"></div>
-				<span class="texty">A Dog on a Walk</span>
+			<div class="thumbnail">
+				<img src="images/thumb1.jpg">
+				<div class="texty">A Dog on a Walk</div>
 			</div>
 		</div>
 		<div class="col-xs-6 col-sm-3 col-md-3 col-lg-3">
-			<div class="container pic">
-				<div><img src="images/thumb2.jpg"></div>
-				<span class="texty">A Delicious Meal</span>
+			<div class="thumbnail">
+				<img src="images/thumb2.jpg">
+				<div class="texty">A Dog on a Walk</div>
 			</div>
 		</div>
 		<div class="col-xs-6 col-sm-3 col-md-3 col-lg-3">
-			<div class="container pic">
-				<div><img src="images/thumb3.jpg"></div>
-				<span class="texty">Starry Night</span>
+			<div class="thumbnail">
+				<img src="images/thumb3.jpg">
+				<div class="texty">A Dog on a Walk</div>
 			</div>
 		</div>
 		<div class="col-xs-6 col-sm-3 col-md-3 col-lg-3">
-			<div class="container pic">
-				<div><img src="images/thumb4.jpg"></div>
-				<span class="texty">AOne With Nature</span>
+			<div class="thumbnail">
+				<img src="images/thumb4.jpg">
+				<div class="texty">A Dog on a Walk</div>
 			</div>
 		</div>
 	</div>
+	
 	<div class="line"></div>
-	<div class="container welcome">
+	<div class="row">
 		<div class="col-xs-12 col-sm-8 col-md-8 col-lg-8">
 			<div class="welcometo">Welcome to SnapGrid</div>
 			<div class="welcometotext">Here you will love to learn all the new things that the website industry has to offer. From band for your buck to buck for your band, we offere litterally everything that interests you. Please click somewhere on the page just for giggles and a lot of fun.</div>
 		</div>
 		<div class="col-xs-12 col-sm-4 col-md-4 col-lg-4">
-			<div class="lastpic"><img src="images/thumb5.jpg"></div>
+			<div class="thumbnail">
+			<img src="images/thumb5.jpg"></div>
 		</div>
 	</div>
 	<footer>
-		<div class="firstsection">
+	<div class="row">
+		<div class="col-xs-12 col-sm-4 col-md-4 col-ld-4 firstsection">
 			<div class="snappy">SnapGrid</div>
 			<div class="lilsnappy">Get the vidoe posted to the internet in record time. All the stuff that should go here is a recap of previous sections. I dont know that i'm saying. Once upon a time...</div>
 		</div>
-		
-		<div class="thirdsection">
-			<div class="contactus">Contact Us</div>
-			<div class="lilcontactus">555 S. Congress Blvd<br>Austin Tx<br>555-555-5555</div>
-		</div>
-		<div class="secondsection">
+		<div class="col-xs-12 col-sm-4 col-md-4 col-ld-4 secondsection">
 			<div class="aboutus">About Us</div>
 			<div class="lilaboutus">Latest Posts<br>Community Contest<br>Job Openings</div>
 		</div>
+		<div class="col-xs-12 col-sm-4 col-md-4 col-ld-4 thirdsection">
+			<div class="contactus">Contact Us</div>
+			<div class="lilcontactus">555 S. Congress Blvd<br>Austin Tx<br>555-555-5555</div>
+		</div>
+		
+	</div>
 	</footer>
 </body>
 </html>
