--- a/index.html
+++ b/index.html
@@ -31,12 +31,13 @@
 			</div> 
 		</div> 
 	</nav>
-	<div class="backgroundpic">
-		<div class="snapgrid"> SnapGrid </div>
-		<div class="snapgrid2">Make your photography portfolio in munutes with just a few simple clicks.</div>
+	<div class="backgroundpic container">
+		<div class="row funnyrow">
+			<div class="snapgrid col-xs-12 col-sm-3 col-sm-offset-2 col-lg-10 col-lg-offset-1"> <div>SnapGrid</div> </div>
+			<div class="snapgrid2 col-xs-12 col-sm-5 col-lg-12"><div>Make your photography portfolio in munutes with just a few simple clicks.</div></div>
+		</div>
 	</div>
-	<div class="container">
-		<div class="row">
+	<div class="container firstchunky">
 			<div class="col-xs-10 col-xs-offset-1 col-sm-7 col-sm-offset-1 col-md-7 col-md-offset-1 col-lg-10 col-lg-offset-1">
 				<div class="template">SnapGrid is a clean and fully responsive template.</div>
 			</div>
@@ -46,8 +47,8 @@
 			<div class="col-xs-3 col-xs-offset-1 col-sm-3 col-sm-offset-1 col-md-3 col-md-offset-1 col-lg-3 col-lg-offset-1">
 				<div class="but">Download Now</div>
 			</div>
-		</div>
 	</div>
+	
 	<div class="line"></div>
 	<div class="container">
 		<div class="col-xs-12 col-sm-4 col-md-4 col-lg-4">
@@ -108,7 +109,7 @@
 			<img src="images/thumb5.jpg"></div>
 		</div>
 	</div>
-	<footer>
+	<footer class="container-fluid">
 	<div class="row">
 		<div class="col-xs-12 col-sm-4 col-md-4 col-ld-4 firstsection">
 			<div class="snappy">SnapGrid</div>
